fix: align text in services-description

--- a/style.css
+++ b/style.css
@@ -291,17 +291,16 @@ nav li:not(:first-child)::before {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
-    font-size: 11.5px;
-    font-weight: 300;
-    line-height: 23px;
-    text-align: left;
-    word-spacing: 2.8px;
-    letter-spacing: -0.7px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: justify;
     color: #767e9e;
 }
 
 .services-info {
-    padding-right: 20px;
+    padding-right: 19.7px;
+    padding-left: 1.5px;
 }
 
 .portfolio {
